--- a/pom.xml
+++ b/pom.xml
@@ -555,16 +555,17 @@
             </dependencies>
         </profile>
    </profiles>
-   <repository>
-  <id>maven-releases</id>
-  <name>maven-releases</name>
-  <url>>http://13.233.125.173:8081/repository/maven-releases/</url>
-</repository>
-    <repositories>
-        <repository>
-            <id>maven-releases</id>
-            <name>maven-releases</name>
-            <url>http://13.233.125.173:8081/repository/maven-releases/</url>
+   
+<repositories>
+         <repository>
+             <id>maven-releases</id>
+             <name>maven-releases</name>
+             <url>>http://13.233.125.173:8081/repository/maven-releases/</url>
+         </repository>
+         <repository>
+            <id>repository.spring.milestone</id>
+            <name>Spring Milestone Repository</name>
+            <url>https://repo.spring.io/milestone</url>
         </repository>
     </repositories>
 
